fix for jumping header issues on the website
this fix was both a bit more involved and a bit hackier than I was hoping the
soultion would be, but that's how things go sometimes

to test:
 - open up the website in a browser and resize your window
 - make sure that the nav is always legible

--- a/website/source/assets/stylesheets/_variables.scss
+++ b/website/source/assets/stylesheets/_variables.scss
@@ -13,6 +13,7 @@ $jumbotron-color:  			#fff;
 $btn-border-radius:   		4px;
 $el-border-radius:   		6px;
 $negative-hero-margin: 		-93px;
+$large-negative-hero-margin: 		-154px;
 // colors
 // -------------------------
 
